syntax = "proto3";

package proto;

import "options.proto";

option go_package = "proto/pb";

service GateSer {
    rpc SendToCli(SendToCli.Req) returns (SendToCli.Rsp);
}

message SendToCli {
    option (rpc_option).ntf = true;
    message Req {
        string RoleId = 1;
        NtyMsg NtyMsg = 2;
    }
    message Rsp {

    }
}

message NtyMsg {
    oneof msg {
        NtyRoleTxt NtyRoleTxt = 1;
    }
}

message NtyRoleTxt {
    string RoleId = 1;
    string Content = 2;
}